# donor-db-builder

./: .env.example  .gitignore  README.md  config.cfg  pyproject.toml  requirements.txt  setup.cfg
.dlt/: config.toml
.raising/: settings.json
data/: cf_column_map.json  ny_open_data_sets.json
docker/memgraph/: docker-compose.yaml
docker/neo4j/: docker-compose.yaml
models/: BaseModels.py  Contribution.py  Donor.py  Filer.py  GraphModels.py  Location.py  SQLModels.py  SequentialIDMixin.py  helpers.py
models/gqlalchemy/: Contribution.py  Donor.py
scratch/: app.py  settings.py  themes.py
scratch/widgets/: app.py  input.py  prompt.py
src/config/: config.json
src/data/: cf_column_map.json  cf_filer_column_map.json
src/donor_db_builder/: AWS_MonitorApp.css  AmazonExample.py  ConfigScreen.py  ConfigScreen.tcss  __init__.py  __main__.py  adhoc.py  app.py  cli.py  config.py  graph_importer.py  import_data.py  importer.py  main.py  neo_ogm.py  parallel_processor.py  processors.py  raising_types.py  settings.py  socrata.py
src/donor_db_builder/cli/: cli.py  events.py  theme_manager.py
src/donor_db_builder/cli/dialogs/: help.py  text_dialog.py
src/donor_db_builder/cli/messages/: messages.py
src/donor_db_builder/cli/screens/: main.py
src/donor_db_builder/cli/views/: __init__.py  ingest_view.py  log_view.py  options_view.py
src/donor_db_builder/components/: LabeledInput.py
src/donor_db_builder/config/: config.json
src/donor_db_builder/content/: __init__.py  adhoc.py  fetcher.py  models.py  models_orm.py  storage.py  storage_engine.py
src/donor_db_builder/database/: __init__.py  base.py  exceptions.py  sql.py
src/donor_db_builder/database/gqlalchemy/: graph_importer.py  importer.py
src/donor_db_builder/ingest/: base.py  campaign_finance.py  neontology.py
src/donor_db_builder/nlp/: entity_extractor.py  pipeline.py
src/donor_db_builder/nlp/models/: Entities.py
src/donor_db_builder/nlp/processors/: base.py  entity_extractor.py  graph_enricher.py  llm_extractor.py  relik_extractor.py
src/donor_db_builder/pipelines/: base.py
src/donor_db_builder/processors/: processors.py
src/donor_db_builder/rag/: base.py  openai.py
src/donor_db_builder/styles/: config.tcss
src/donor_db_builder/utils/: __init__.py  args.py  cleaning.py  helpers.py  logger.py  utils.py
src/donor_db_builder/widgets/: input.py  prompt_bar.py
