[project]
name = "donor-db-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Torin Rozzelle",email = "hello@torinrozzelle.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "neo4j",
    "pandas",
    "loguru",
    "python-dotenv",
    "numpy",
    "requests (>=2.32.3,<3.0.0)",
    "gqlalchemy (>=1.6.0,<2.0.0)",
    "polars (>=1.19.0,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "duckdb (>=1.1.3,<2.0.0)",
    "duckdb-engine (>=0.14.2,<0.15.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "spacy (>=3.8.3,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"

[tool.poetry.scripts]
ingest = "donor_db_builder.adhoc:main"